--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.15",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -18,8 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-simple-typewriter": "^5.0.1",
-    "tailwind-merge": "^3.0.2",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -33,5 +36,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
