--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
