--- a/movieSiteBack/.gitignore
+++ b/movieSiteBack/.gitignore
@@ -1,5 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+!_build/prod/rel/moviesiteback
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
